--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/main"
@@ -12,61 +13,47 @@
         android:layout_width="240dp"
         android:layout_height="33dp"
         android:layout_marginTop="40dp"
-        android:text="Ejemplo de uso de OnClick"
+        android:text="Laboratorio 2"
         android:textSize="20sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.497"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
-
-   <Switch
-    android:id="@+id/SwCambiarModo"
-    android:layout_width="162dp"
-    android:layout_height="32dp"
-    android:layout_marginTop="20dp"
-    android:text="Cambiar modo"
-    app:layout_constraintEnd_toEndOf="parent"
-    app:layout_constraintHorizontal_bias="0.497"
-    app:layout_constraintStart_toStartOf="parent"
-    app:layout_constraintTop_toBottomOf="@+id/ivImagenLogo"/>
-
-
     <ImageView
-    android:id="@+id/ivImagenLogo"
-    android:layout_width="205dp"
-    android:layout_height="157dp"
-    android:layout_marginTop="12dp"
-    app:layout_constraintEnd_toEndOf="parent"
-    app:layout_constraintStart_toStartOf="parent"
-    app:layout_constraintTop_toBottomOf="@+id/tvTitulo"
-    app:srcCompat="@android:mipmap/sym_def_app_icon" />
+        android:id="@+id/ivImagenLogo"
+        android:layout_width="205dp"
+        android:layout_height="157dp"
+        android:layout_marginTop="12dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/tvTitulo"
+        app:srcCompat="@android:mipmap/sym_def_app_icon" />
+
+    <Switch
+        android:id="@+id/SwCambiarModo"
+        android:layout_width="162dp"
+        android:layout_height="32dp"
+        android:layout_marginTop="20dp"
+        android:text="Cambiar modo"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.497"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/ivImagenLogo" />
 
     <EditText
-    android:id="@+id/edtEstadoModo"
-    android:layout_width="276dp"
-    android:layout_height="40dp"
-    android:layout_marginTop="16dp"
-    android:ems="10"
-    android:inputType="text"
-    android:textAlignment="center"
-    android:textSize="14sp"
-    android:visibility="visible"
-    app:layout_constraintEnd_toEndOf="parent"
-    app:layout_constraintStart_toStartOf="parent"
-    app:layout_constraintTop_toBottomOf="@+id/SwCambiarModo" />
-
-    <com.google.android.material.floatingactionbutton.FloatingActionButton
-        android:id="@+id/floatingActionButton"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginEnd="16dp"
-        android:layout_marginBottom="16dp"
-        android:clickable="true"
-        app:layout_constraintBottom_toBottomOf="parent"
+        android:id="@+id/edtEstadoModo"
+        android:layout_width="276dp"
+        android:layout_height="40dp"
+        android:layout_marginTop="16dp"
+        android:ems="10"
+        android:inputType="text"
+        android:textAlignment="center"
+        android:textSize="14sp"
+        android:visibility="visible"
         app:layout_constraintEnd_toEndOf="parent"
-        app:srcCompat="@android:drawable/ic_menu_add" />
-
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/SwCambiarModo" />
 
     <CheckBox
         android:id="@+id/chboxDesactivacambiomodo"
@@ -93,6 +80,7 @@
             android:layout_height="wrap_content"
             android:checked="true"
             android:text="Mostrar imagen" />
+
         <RadioButton
             android:id="@+id/radbtnOcultarLista"
             android:layout_width="match_parent"
@@ -101,13 +89,43 @@
     </RadioGroup>
 
     <ListView
-    android:id="@+id/lstDepartamentos"
-    android:layout_width="261dp"
-    android:layout_height="118dp"
-    android:layout_marginStart="24dp"
-    android:layout_marginTop="46dp"
-    app:layout_constraintStart_toStartOf="parent"
-    app:layout_constraintTop_toBottomOf="@+id/radioGroup" />
+        android:id="@+id/lstDepartamentos"
+        android:layout_width="261dp"
+        android:layout_height="118dp"
+        android:layout_marginStart="24dp"
+        android:layout_marginTop="46dp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/radioGroup" />
 
+    <ImageButton
+        android:id="@+id/imgButtonFecha"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="19dp"
+        android:layout_marginEnd="48dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/edtEstadoModo"
+        app:srcCompat="@android:drawable/ic_menu_today" />
+
+    <ImageButton
+        android:id="@+id/imgButtonHora"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="14dp"
+        android:layout_marginEnd="48dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/imgButtonFecha"
+        app:srcCompat="@android:drawable/ic_menu_recent_history" />
+
+    <com.google.android.material.floatingactionbutton.FloatingActionButton
+        android:id="@+id/floatingActionButton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="16dp"
+        android:layout_marginBottom="16dp"
+        android:clickable="true"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:srcCompat="@android:drawable/ic_menu_add" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
